added footer and contact section

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 <body>
     <main id='home'>
         <header>
-            <img src="./images/mainLogo.png" alt="">
+            <img src="./images/mainLogo.png" alt="Humanyen, Energizing people for business success">
             <div>
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
-                <a href="">Contact</a>
+                <a href="#contact">Contact</a>
             </div>
         </header>
 
@@ -86,7 +86,20 @@
         <section id='about'></section>
 
 
+        <!-- contact -->
+        <section id='contact'>
+            <div>
+                <img src="./images/smallLogo.png" alt="Humanyen">
+                <h3>"Leaders chart a course for their business without ever knowing if their people are ready for the journey. Select, train, and develop your people to be the foundation of your success."</h3>
+            </div>
+            <div>
+                <!-- contact form here -->
+            </div>
+        </section>
+
+
         <footer>
+            <p>© Humanyen 2017. All rights reserved.</p>
         </footer>
     </main>
 </body>
