added services and about

--- a/index.html
+++ b/index.html
@@ -68,7 +68,35 @@
 
 
         <!-- services -->
-        <section></section>
+        <section id="services">
+            <h3>Our Services</h3>
+            <div class="serviceWrapper">
+                <div>
+                    <p class="title">Coaching & Candidate Selection</p>
+                    <p><b>Coaching</b> builds leadership competencies to support and motivate the effectiveness of individuals and teams.</p>
+                    <p><b>Candidate Selection</b> Evaluate your future candidates to help you make the right hire for your organization.</p>
+                </div>
+
+                <div>
+                    <p class="title">Training & Development</p>
+                    <p>Build employee and organizational skills</p>
+                    <ul>
+                        <li>MBTI / DISC</li>
+                        <li>360° Feedback</li>
+                        <li>Climate / Engagement Surveys</li>
+                        <li>Front Line & Emerging Leadership Training</li>
+                        <li>Mid-Senior Leadership Training</li>
+                        <li>Customizable Programs</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <p class="title">Team Building & Meeting Facilitation</p>
+                    <p><b>Team Building</b> brings lessons learned to life as well as specialized learning opportunities.</p>
+                    <p><b>Meeting Facilitation</b> runs from ‘Getting to know you’ all the way through to strategic planning. Always custom made, never off the shelf.</p>
+                </div>
+            </div>
+        </section>
 
 
         <!-- organizations  -->
@@ -83,7 +111,19 @@
 
 
         <!-- Angela -->
-        <section id='about'></section>
+        <section id='about'>
+            <div>
+                <h2>Angela Huntsman, Ph.D.</h2>
+                <h4>Principal Consultant</h4>
+                <p>Angela is a consulting clinical psychologist with expertise in the practice and research of human motivation and communication. Angela is also an experienced executive with a demonstrated history of working in private sector, government and academia – in-house and externally. Skilled in Executive and Team Engagement, Development, Business Planning, Program Design and Delivery, and Change Management across a variety of industries, Angela has a proven track record of innovating solutions and avenues to unlock what organizations want their people to achieve. Highly collaborative and engaging, she brings about alignment where there is resistance and divide. Along with a deep understanding of individual and group dynamics that opens people to change in organizations, she is an effective leader of multi-discplinary teams across the dividing lines that separate people.</p>
+                <p>Across any sector and from any vantage point, Angela designs, builds, coordinates and develops teams that achieve business success.</p>
+                <p>As Head of Organizational Development in a $4 bn company for 5 years, Angela created organizational development engagements with impact across the enterprise. In her role, Angela maximizes development budgets, reduces costs, and increases impact.</p>
+                <p>Angela has also had a journey into the ‘real’ Toyota Way, understanding what stymies companies who struggle with stalled Lean/Change programs and how to reinvigorate an organization’s investment of time and money in Lean/Change processes.</p>
+                <p>Angela brings stability, authenticity and clarity to situations that are not. By designing and facilitating guided problem-solving conversations, processes, and when needed, research, Angela helps organizations align internally to help them make informed decisions.</p>
+            </div>
+            <img src="./images/Angela.jpg" alt="Angela Huntsman, Ph.D.">
+            
+        </section>
 
 
         <!-- contact -->
