parallax is working

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
     <!-- mobile styles -->
     <link rel="stylesheet" href="mobile.css">
+
+
+
 </head>
 <body>
     <main id='home'>
@@ -55,7 +58,12 @@
         
         
         <!-- energize parallax -->
-        <section></section>
+        <section class="parallaxWrapper">
+            <img src="./images/energize.jpg" alt="">
+            <div>
+                <h3>Energize your people<br>for business success</h3>
+            </div>
+        </section>
 
 
         <!-- grow -->
@@ -107,7 +115,9 @@
 
 
         <!-- tools parallax -->
-        <section></section>
+        <section class="parallaxWrapper">
+            <img src="./images/tools.jpg" alt="">
+        </section>
 
 
         <!-- Angela -->
@@ -142,5 +152,9 @@
             <p>© Humanyen 2017. All rights reserved.</p>
         </footer>
     </main>
+
+
+    <!-- JS -->
+    <script src="./main.js"></script>
 </body>
 </html>
