added text to parallax

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
         <!-- tools parallax -->
         <section class="parallaxWrapper">
             <img src="./images/tools.jpg" alt="">
+            <div>
+                <h3>Give leaders the tools they need to guide others</h3>
+            </div>
         </section>
 
 
