--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <!-- services -->
         <section id="services">
-            <h3>Our Services</h3>
+            <!-- <h3>Our Services</h3> -->
             <div class="serviceWrapper">
                 <div>
                     <p class="title">Coaching & Candidate Selection</p>
