most client requests added

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <!-- carousel -->
         <section>
             <div id="carouselWrapper">
-                <button id='next'></button>
-                <button id='back'></button>
+                <!-- <button id='next'></button> -->
+                <!-- <button id='back'></button> -->
                 <div id="screens">
                     <div class="screen">
                         <span>
@@ -135,7 +135,7 @@
         <!-- organizations  -->
         <section class="info">
             <h2>Organizations We Have Served</h2>
-            <p>Humanyen has a proven track record of working with organizations, small and large, ranging from consumer packaged goods, technology, agriculture, as well as across government and education. Our deep understanding of what motivates people allows us to function effectively in any work environment. Here are some of the organizations we have worked with…</p>
+            <p>Humanyen has a proven track record of working with organizations, small and large, ranging from consumer packaged goods, technology, agriculture, as well as across government and education. Our deep understanding of what motivates people allows us to function effectively in any work environment.</p>
         </section>
 
 
