added carousel dots

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                         </span>
                     </div>
                 </div>
+                <div id="carouselDots"></div>
             </div>
         </section>
 
