--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section>
             <div id="carouselWrapper">
                 <!-- <button id='next'></button> -->
-                <div id="screens">
+                <!-- <div id="screens">
                     <div class="screen">
                         <span>
                             <h4>Culture eats strategy for breakfast</h4>
@@ -60,7 +60,8 @@
                         </span>
                     </div>
                 </div>
-                <div id="carouselDots"></div>
+                <div id="carouselDots"></div> -->
+                <img src="./images/placeholder.png" alt="">
             </div>
         </section>
 
@@ -148,7 +149,7 @@
         <!-- Angela -->
         <section id='about'>
             <div>
-                <h2>Angela Huntsman, Ph.D.</h2>
+                <h3>Angela Huntsman, Ph.D.</h3>
                 <h4>Principal Consultant</h4>
                 <p>Angela is a consulting clinical psychologist with expertise in the practice and research of human motivation and communication. Angela is also an experienced executive with a demonstrated history of working in private sector, government and academia – in-house and externally. Skilled in Executive and Team Engagement, Development, Business Planning, Program Design and Delivery, and Change Management across a variety of industries, Angela has a proven track record of innovating solutions and avenues to unlock what organizations want their people to achieve. Highly collaborative and engaging, she brings about alignment where there is resistance and divide. Along with a deep understanding of individual and group dynamics that opens people to change in organizations, she is an effective leader of multi-discplinary teams across the dividing lines that separate people.</p>
                 <p>Across any sector and from any vantage point, Angela designs, builds, coordinates and develops teams that achieve business success.</p>
