cleaning up +added carousel gif

--- a/index.html
+++ b/index.html
@@ -39,29 +39,7 @@
         <!-- carousel -->
         <section>
             <div id="carouselWrapper">
-                <!-- <button id='next'></button> -->
-                <!-- <div id="screens">
-                    <div class="screen">
-                        <span>
-                            <h4>Culture eats strategy for breakfast</h4>
-                            <h4>Your people are the energy your business runs on</h4>
-                        </span>
-                    </div>
-                    <div class="screen">
-                        <span>
-                            <h4>Grow your people</h4>
-                            <h4>to grow your business</h4>
-                        </span>
-                    </div>
-                    <div class="screen">
-                        <span>
-                            <h4>Success runs on the effectiveness of</h4>
-                            <h4>communication and connection</h4>
-                        </span>
-                    </div>
-                </div>
-                <div id="carouselDots"></div> -->
-                <img src="./images/placeholder.png" alt="">
+                <img src="./images/slides/slides.gif" alt="">
             </div>
         </section>
 
@@ -182,8 +160,5 @@
 
     <!-- parallax -->
     <script src="./js/parallax.js"></script>
-
-    <!-- carousel -->
-    <script src="./js/carousel.js"></script>
 </body>
 </html>
