--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div>
                 <a href="./">Home</a>
                 <a href="#about">About</a>
-                <a href="#contact">Contact</a>
+                <a href="https://form.typeform.com/c/xiCOXkwT">Contact</a>
             </div>
         </header>
 
